Support for DiGraph, DiTree, PlanarPoint, SpatialPoint.
Removed DTO as out of date with respect to DTO-Lombok.